[package]
name = "vk-shader-macros"
description = "Procedural macros for working with Vulkan shaders"
repository = "https://github.com/Ralith/vk-shader-macros"
version = "0.2.6"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["vulkan", "spirv"]
categories = ["rendering"]

[badges]
maintenance = { status = "actively-developed" }

[features]
strip = ["vk-shader-macros-impl/strip"] # Omit debug info from generated SPIR-V by default
default-optimize-zero = ["vk-shader-macros-impl/default-optimize-zero"] # Set default optimization level to zero for debugging
build-from-source = ["vk-shader-macros-impl/build-from-source"] # Force shaderc to be built from source

[dependencies]
vk-shader-macros-impl = { path = "impl", version = "0.2.6" }
proc-macro-hack = "0.5.4"

[workspace]
