[package]
name = "vk-shader-macros-impl"
description = "Implementation detail of vk-shader-macros"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[features]
default = ["build-native-shaderc"]
build-native-shaderc = ["shaderc/build-native-shaderc"] # Clone and build the C++ shaderc project

[dependencies]
syn = { version = "0.15.26", default-features = false, features = [ "parsing", "proc-macro", "derive" ] }
quote = "0.6.11"
proc-macro2 = "0.4.27"
proc-macro-hack = "0.5.4"
shaderc = { version = "0.3.10", default-features = false }
