[package]
name = "vk-shader-macros-impl"
description = "Implementation detail of vk-shader-macros"
version = "0.2.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[features]
strip = []

[dependencies]
syn = { version = "0.15.26", default-features = false, features = [ "parsing", "proc-macro", "derive" ] }
quote = "0.6.11"
proc-macro2 = "0.4.27"
proc-macro-hack = "0.5.4"
shaderc = "0.5"
